all the interactions with the api are working. Delete and logout are missing

--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -3,11 +3,10 @@
 {% block title %}Registrierung{% endblock %}
 
 {% block content %}
-    <!-- Ihr Formular -->
-    <form action="/register" method="post">
-        <input type="email"   name="email" placeholder="E-Mail" required>
-        <input type="password" name="password" placeholder="Passwort" required>
-        <input type="text"    name="name" placeholder="Name" required>
+    <form action="{{ request.url_for('register') }}" method="post">
+        <input title="email" type="email" name="email" placeholder="E-Mail" required>
+        <input title="password" type="password" name="password" placeholder="Passwort" required>
+        <input title="name" type="text" name="name" placeholder="Name" required>
         <button type="submit">Registrieren</button>
     </form>
 {% endblock %}
