--- a/app/templates/content/note.html
+++ b/app/templates/content/note.html
@@ -25,9 +25,8 @@ Note
             <input type="hidden" name="note_id" value="{{ col['id'] }}">
             <button type="submit">Delete</button>
         </form>
-        <a href="{{ request.url_for('edit', note_id=col['id']) }}">Edit</a>
-        <h3>{{ col['title'] }}</h3>
-        <h5>category: {{ col['category'] }}</h5>
+        <a href="{{ request.url_for('edit_ui') }}?note_id={{ col['id'] }}">Edit</a>
+        <h3>{{ col['title'] }}</h3><h5>{{ col['category'] }}</h5>
         <p>{{ col['text'] }}</p>
     </div>
     <hr>
