--- a/app/templates/content/update.html
+++ b/app/templates/content/update.html
@@ -10,7 +10,7 @@ Update
         <input type="hidden" name="id" value="{{ data['id'] }}">
         <input type="text" name="title" value="{{ data['title'] }}"> <br>
         <textarea name="text" >{{ data['text'] }}</textarea> <br>
-        <input list="category" name="category" value="{{ data['category'] }}"> <br>
+        <input name="category" value="{{ data['category'] }}"> <br>
         <button type="submit">Update</button>
     </form>
 
