--- a/app/templates/content/note.html
+++ b/app/templates/content/note.html
@@ -26,8 +26,13 @@ Note
             <button type="submit">Delete</button>
         </form>
         <a href="{{ request.url_for('edit_ui') }}?note_id={{ col['id'] }}">Edit</a>
-        <h3>{{ col['title'] }}</h3><h5>{{ col['category'] }}</h5>
-        <p>{{ col['text'] }}</p>
+        <div>
+            <h5>{{ col['category_rel']['description'] }}</h5>
+            <h3>{{ col['title'] }}</h3>
+        </div>
+        <div>
+            <p>{{ col['text'] }}</p>
+        </div>
     </div>
     <hr>
 {% endfor %}
